samples/_failures_safe/1761713074_6e1f0f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6feac15d.c: In function ‘main’:
./samples/SAFE/__tmp_6feac15d.c:149:13: error: expected expression at end of input
  149 |             for (int i = 0; i <
      |             ^~~
./samples/SAFE/__tmp_6feac15d.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6feac15d.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6feac15d.c:149:13: error: expected declaration or statement at end of input
